# YaYeetAlloc

./: CMakeLists.txt  README.md
include/: yayeet_alloc.h
src/: yayeet_alloc.c
test/: CMakeLists.txt  test_yayeet_alloc.c
